[gd_scene load_steps=2 format=3 uid="uid://jct1k21n1kkn"]

[ext_resource type="Script" path="res://Menu/PuzzleSelect.gd" id="1_31wfs"]

[node name="PuzzleSelect" type="Node2D"]
position = Vector2(3, -3)
script = ExtResource("1_31wfs")
puz1_path = "res://Puzzles/Puzzle1_TEST.tscn"
puz2_path = "res://Puzzles/Puzzle2_TEST.tscn"
puz3_path = "res://Puzzles/Puzzle3_TEST.tscn"
puz4_path = "res://Puzzles/Puzzle4_TEST.tscn"

[node name="Window" type="Window" parent="."]
mode = 3
initial_position = 2
size = Vector2i(1920, 1080)

[node name="ColorRect" type="ColorRect" parent="Window"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.278431, 1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Window/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -185.5
offset_top = -210.0
offset_right = 185.5
offset_bottom = 210.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 60

[node name="Puzzle 1" type="Button" parent="Window/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "PUZZLE 1"

[node name="Puzzle 2" type="Button" parent="Window/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "PUZZLE 2"

[node name="Puzzle 3" type="Button" parent="Window/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "PUZZLE 3"

[node name="Puzzle 4" type="Button" parent="Window/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "PUZZLE 4"

[connection signal="pressed" from="Window/ColorRect/VBoxContainer/Puzzle 1" to="." method="_on_puzzle_1_pressed"]
[connection signal="pressed" from="Window/ColorRect/VBoxContainer/Puzzle 2" to="." method="_on_puzzle_2_pressed"]
[connection signal="pressed" from="Window/ColorRect/VBoxContainer/Puzzle 3" to="." method="_on_puzzle_3_pressed"]
[connection signal="pressed" from="Window/ColorRect/VBoxContainer/Puzzle 4" to="." method="_on_puzzle_4_pressed"]
